# docker_native-build

./: .travis.yml  Dockerfile.template  README.md  update.sh
amd64/: Dockerfile
arm64/: Dockerfile
armel/: Dockerfile
armhf/: Dockerfile
i386/: Dockerfile
mips/: Dockerfile
mips64el/: Dockerfile
mipsel/: Dockerfile
ppc64el/: Dockerfile
ppc64el-next/: Dockerfile
s390x/: Dockerfile
stretch/amd64/: Dockerfile
stretch/arm64/: Dockerfile
stretch/armel/: Dockerfile
stretch/armhf/: Dockerfile
stretch/i386/: Dockerfile
stretch/mips/: Dockerfile
stretch/mips64el/: Dockerfile
stretch/mipsel/: Dockerfile
stretch/ppc64el/: Dockerfile
stretch/ppc64el-next/: Dockerfile
stretch/s390x/: Dockerfile
testing/amd64/: Dockerfile
testing/arm64/: Dockerfile
testing/armel/: Dockerfile
testing/armhf/: Dockerfile
testing/mips/: Dockerfile
testing/mips64el/: Dockerfile
testing/mipsel/: Dockerfile
testing/ppc64el/: Dockerfile
testing/ppc64el-next/: Dockerfile
testing/s390x/: Dockerfile
tests/deb/: Makefile.am  configure.ac  helloworld-0.0.pc.in
tests/deb/debian/: README  README.source  changelog  control  copyright  libhelloworld0.lintian-overrides
tests/deb/include/helloworld/: helloworld.h
tests/deb/src/: helloworld.c
